Add readme with project structure